# cauldron

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: cauldron_benchmark.rs
src/: audio.rs  codecs.rs  crc.rs  errors.rs  lib.rs  utils.rs
src/flac/: decoder.rs  frame.rs  mod.rs
src/io/: dynamic_buf_reader.rs  mod.rs  read.rs  write.rs
src/mp3/: frame.rs  mod.rs  types.rs
src/wav/: chunks.rs  mod.rs
